fixed collapse buttons(arrows) in each boxes, delete button

--- a/client/src/less/fir.less
+++ b/client/src/less/fir.less
@@ -145,5 +145,24 @@
   user-select: none;
 }
 
+#bufferInput{
+  width: 50px;
+}
+
+.hittaGrannarMedBufferRow{
+  display: inline-block;
+}
+
+#FIRSearchMinimizeButton{
+  width: 35px;
+}
+
+#FIRHittaGrannarMinimizeButton{
+  width: 35px;
+}
+
+#FIRCreateMinimizeButton{
+  width: 35px;
+}
 
 // Analys
